fix(training): 完课数排序白名单改为 Java 8 兼容写法
项目编译目标为 1.8，Set.of 不可用，改用 Collections.unmodifiableSet。

Co-authored-by: Cursor <cursoragent@cursor.com>